add filter and paginator

--- a/src/app/modules/Calendar/calendar/calendar.component.css
+++ b/src/app/modules/Calendar/calendar/calendar.component.css
@@ -3,4 +3,11 @@
     padding: 2px 4px;
     /* color:#000000 */
   }
+
+.profit{
+background-color: rgb(224, 203, 208);
+margin-right: 20%;
+margin-left: 20%;
+text-align: center; 
+ }
   
