--- a/src/app/modules/Calendar/calendar/calendar.component.html
+++ b/src/app/modules/Calendar/calendar/calendar.component.html
@@ -3,3 +3,11 @@
 <full-calendar #calendar [options]="calendarOptions">
     <!-- <button title="Week">week</button> -->
 </full-calendar>
+<br>
+<br>
+<div  class="profit">
+<P>
+    סך הרווחים החדשיים: {{profit}}
+</P>
+</div>
+
