--- a/src/app/modules/orders/order-card/order-card.component.css
+++ b/src/app/modules/orders/order-card/order-card.component.css
@@ -93,3 +93,8 @@ margin-left: 2%;
       width:28%;
       margin-right:2%;
   }
+  .bookingId{
+    width: 60%;
+    margin-right: 2%;
+    margin-right: 2%;
+  }
