--- a/src/app/modules/orders/orders-list/orders.component.css
+++ b/src/app/modules/orders/orders-list/orders.component.css
@@ -45,3 +45,11 @@
   th.mat-sort-header-sorted {
     color: black;
   }
+  table {
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
