--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form>
+  <!-- <form>
     <mat-form-field  appearance="fill">
       <mat-label>הכנס את שם הלקוח</mat-label>
       <input type="text"
@@ -24,126 +24,59 @@
     </mat-form-field>
     <button (click)="findCustomer(name.value)">חיפוש</button>
     <button (click)="clear()">נקה שדות חיפוש</button>
-  </form>
+  </form> -->
 
 
-<!-- <mat-form-field>
-  <input (keyup)="applyFilter($event.target.value)" matInput placeholder="שם לקוח">
-</mat-form-field> -->
-<!-- <div class="mat-elevation-z8 demo-table"> -->
-  <!-- <mat-form-field appearance="standard">
+  <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field> -->
-  <table mat-table [dataSource]="customers"  matSort (matSortChange)="sortData($event)"
-  class="mat-elevation-z8" >
+    <input matInput (keyup)="applyFilter($event)" placeholder="הכנס שם לקוח " #input>
+  </mat-form-field>
+
+  <div class="mat-elevation-z8 demo-table">
+    <table mat-table [dataSource]="dataSource"  matSort >
     <!-- (matSortChange)="announceSortChange($event)" -->
 
     <!-- FirstName Column -->
     <ng-container matColumnDef="firstName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by firstname"> First Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header > First Name</th>
+      <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
     </ng-container>
 
     <!-- LastName Column -->
     <ng-container matColumnDef="lastName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by lastName"> Last Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+      <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
     </ng-container>
 
     <!-- EmailAddress Column -->
     <ng-container matColumnDef="emailAddress">
-      <th mat-header-cell *matHeaderCellDef> EmailAddress </th>
-      <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> EmailAddress </th>
+      <td mat-cell *matCellDef="let row"> {{row.emailAddress}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef>Address</th>
-      <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+      <td mat-cell *matCellDef="let row"> {{row.address}} </td>
     </ng-container>
     <!-- Symbol Column -->
     <ng-container matColumnDef="phoneNumber">
-      <th mat-header-cell *matHeaderCellDef> PhoneNumber </th>
-      <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> PhoneNumber </th>
+      <td mat-cell *matCellDef="let row"> {{row.phoneNumber}} </td>
     </ng-container>
-    <td>
-    <div class="example-button-container">
-      <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </div>
-    </td>
+   
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"(dblclick)="getCustomerDetails(row.id)"></tr>
-    <!-- <tr class="mat-row" *matNoDataRow>
+  
+    <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr> -->
+    </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons >
-  </mat-paginator>
-              <!-- aria-label="Select page of customers elements"
-                 [pageSize]="1"
-                 [length]="5" -->
-<!-- </div> -->
-
+  <mat-paginator [pageSizeOptions]="[7, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
 </body>
 </html>
-
-<!-- 
-<table mat-table [dataSource]="customers"  class="mat-elevation-z8">
-
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef> First Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-  </ng-container>
-
-  
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Last Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="emailAddress">
-    <th mat-header-cell *matHeaderCellDef> EmailAddress </th>
-    <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef>Address</th>
-    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="phoneNumber">
-    <th mat-head
-    er-cell *matHeaderCellDef>PhoneNumber</th>
-    <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
-  </ng-container>
-  
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay" ></tr>
-   <tr
-  mat-row *matRowDef="let row; columns: columnsToDisplay;" (dblclick)="getCustomerDetails(row.id)"></tr> 
-</table> -->
-
-
-
-
-
-<!-- to chanchy;) -->
-
-<!-- <ng-container matColumnDef="actions">
-  <mat-header-cell *matHeaderCellDef>Actions </mat-header-cell>
-  <mat-cell *matCellDef="let row">
-    <button mat-icon-button matTooltip="Click to Edit" class="iconbutton" color="primary">
-        <mat-icon aria-label="Edit">edit</mat-icon>
-      </button>
-    <button mat-icon-button matTooltip="Click to Delete" class="iconbutton" color="warn">
-        <mat-icon aria-label="Delete">delete</mat-icon>
-      </button>
-  </mat-cell>
-</ng-container> -->
 
 
  
