--- a/src/app/modules/Calendar/calendar/calendar.component.html
+++ b/src/app/modules/Calendar/calendar/calendar.component.html
@@ -1,5 +1,5 @@
-<p>calendar works!</p>
-<button (click)="toggleWeekends()">toggle weekends</button>
+<!-- <p>calendar works!</p> -->
+<!-- <button (click)="toggleWeekends()">toggle weekends</button> -->
 <full-calendar #calendar [options]="calendarOptions">
     <!-- <button title="Week">week</button> -->
 </full-calendar>
@@ -7,7 +7,7 @@
 <br>
 <div  class="profit">
 <P>
-    סך הרווחים החדשיים: {{profit}}
+    סך הרווחים החודשיים: {{profit}}
 </P>
 </div>
 
