--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -115,8 +115,8 @@
       <span matPrefix>₪&nbsp;</span>
       <span matSuffix>.00</span>
     </mat-form-field>
-    </td>
-    <td>
+    <!-- </td>
+    <td> -->
       <mat-form-field class="example-form-field" appearance="fill" class="bookingId">
         <mat-label>מספר הזמנה</mat-label>
         <input matInput type="text" formControlName="bookingId">
@@ -135,7 +135,7 @@
         </td>
       </tr>
     </table>
-    <br>
+    <!-- <br> -->
         <table>
             <tr>
                 <td>
@@ -168,12 +168,12 @@
               </tr>
           </table>
 
-<table>
+<!-- <table>
     <br>
     <tr>
       <td>
   
-</td>
+</td> -->
 <!-- <td>
   <div dir="rtl">
     <section >
@@ -185,9 +185,9 @@
     </section>
   </div>
 </td> -->
-</tr>
+<!-- </tr>
   </table> 
-     <br>
+     <br> -->
     <mat-form-field class="comments" appearance="fill">
       <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
         <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
