--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
      <app-menu class="nav"></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
-    </div> 
-  <!-- </div> -->
-    <router-outlet></router-outlet>
+    <!-- </div>  -->
+  </div>
+    <!-- <router-outlet></router-outlet> -->
