--- a/src/app/modules/orders/order-card/order-card.component.css
+++ b/src/app/modules/orders/order-card/order-card.component.css
@@ -66,6 +66,7 @@ margin-left: 2%;
   .btn {
     font-size: 1vw;
     margin-right: 2%;
+    width: 150px;
 }
 .example-form-field {
     margin-right: 20px;
@@ -77,7 +78,7 @@ margin-left: 2%;
   }
 
   .price{
-      width: 40%;
+      width: 35%;
       margin-left: 2%;
   }
 
@@ -94,7 +95,6 @@ margin-left: 2%;
       margin-right:2%;
   }
   .bookingId{
-    width: 60%;
-    margin-right: 2%;
-    margin-right: 2%;
+    width: 24%;
+    margin-left: 2%;
   }
