--- a/src/app/modules/orders/orders-list/orders.component.html
+++ b/src/app/modules/orders/orders-list/orders.component.html
@@ -1,9 +1,10 @@
 
+<div dir="rtl">
 <mat-form-field appearance="standard">
-  <mat-label>Filter</mat-label>
+  <mat-label><mat-icon>search</mat-icon> חיפוש </mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="הכנס שם לקוח ,שם מלון, או תאריך" #input>
 </mat-form-field>
-
+</div>
 <div class="mat-elevation-z8 demo-table">
     <table mat-table [dataSource]="dataSource"  matSort >
   
@@ -62,5 +63,5 @@
       </tr>
     </table>
       
-    <mat-paginator [pageSizeOptions]="[7, 10, 25, 100]" ></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>
 </div>
