--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -1,78 +1,75 @@
- 
-    <div dir="rtl" >
-      <div class="form-card">
-      <div class="title">
-        <svg xmlns="http://www.w3.org/2000/svg" width="90" height="90" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
-          <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-        </svg>
-            <h1>כרטיס הזמנה</h1>
-          </div>
+<div dir="rtl">
+  <div class="form-card">
+    <div class="title">
+      <svg xmlns="http://www.w3.org/2000/svg" width="90" height="90" fill="currentColor" class="bi bi-calendar-event"
+        viewBox="0 0 16 16">
+        <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" />
+        <path
+          d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+      </svg>
+      <h1>כרטיס הזמנה</h1>
+    </div>
     <form [formGroup]="orderForm">
 
-  
-      <mat-form-field  class="name-filed" appearance="fill">
-        <mat-label><mat-icon>person</mat-icon>  שם לקוח</mat-label>
-        <input type="text"
-        id="filterField"
-        
-            placeholder="בחר לקוח"
-               matInput
-               formControlName="customerName"
-               [matAutocomplete]="auto"
-               #customer
-               >
-        <mat-autocomplete #auto="matAutocomplete" >
+
+      <mat-form-field class="name-filed" appearance="fill">
+        <mat-label>
+          <mat-icon>person</mat-icon> שם לקוח
+        </mat-label>
+        <input type="text" id="filterField" placeholder="בחר לקוח" matInput formControlName="customerName"
+          [matAutocomplete]="auto" #customer>
+        <mat-autocomplete #auto="matAutocomplete">
           <mat-select [formControl]="myControl">
-            <mat-option *ngFor="let option of filteredOptions | async" [value]="option" (click)="findCustomer(customer.value)">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option"
+              (click)="findCustomer(customer.value)">
               {{option}}
-          </mat-option>
-        </mat-select>
+            </mat-option>
+          </mat-select>
         </mat-autocomplete>
       </mat-form-field>
-     
+
       <!-- hotel auto complete -->
-      <mat-form-field  class="hotel" appearance="fill">
-        <mat-label><mat-icon>hotel</mat-icon>  שם מלון</mat-label>
-        <input type="text"
-        id="filterField"
-            placeholder="בחר מלון"
-               matInput
-               formControlName="hotelName"
-               [matAutocomplete]="autoHotel"
-               #hotel
-               >
-        <mat-autocomplete #autoHotel="matAutocomplete" >
+      <mat-form-field class="hotel" appearance="fill">
+        <mat-label>
+          <mat-icon>hotel</mat-icon> שם מלון
+        </mat-label>
+        <input type="text" id="filterField" placeholder="בחר מלון" matInput formControlName="hotelName"
+          [matAutocomplete]="autoHotel" #hotel>
+        <mat-autocomplete #autoHotel="matAutocomplete">
           <mat-select [formControl]="myHotelControl">
             <mat-option *ngFor="let option of hotelsOption | async" [value]="option" (click)="findHotel(hotel.value)">
               {{option}}
-          </mat-option>
-        </mat-select>
+            </mat-option>
+          </mat-select>
         </mat-autocomplete>
       </mat-form-field>
-     
-<br>
-  <mat-form-field appearance="fill" class="dates">
-  <mat-label>תאריכים</mat-label>
-  <mat-date-range-input [rangePicker]="rangePicker">
-    <input matStartDate formControlName="checkInDate" placeholder="תאריך הגעה" >
-    <input matEndDate formControlName="checkOutDate" placeholder="תאריך עזיבה">
-  </mat-date-range-input>
-  <mat-datepicker-toggle matSuffix [for]="rangePicker"></mat-datepicker-toggle>
-  <mat-date-range-picker #rangePicker>
-  </mat-date-range-picker>
-</mat-form-field>
 
-<mat-form-field class="time" appearance="fill">
-  <mat-label><mat-icon>watch_later</mat-icon> הגעה מוקדמת</mat-label>
-  <input type="datetime-local" matInput  formControlName="earlyCheckIn">
-</mat-form-field>
+      <br>
+      <mat-form-field appearance="fill" class="dates">
+        <mat-label>תאריכים</mat-label>
+        <mat-date-range-input [rangePicker]="rangePicker">
+          <input matStartDate formControlName="checkInDate" placeholder="תאריך הגעה">
+          <input matEndDate formControlName="checkOutDate" placeholder="תאריך עזיבה">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="rangePicker"></mat-datepicker-toggle>
+        <mat-date-range-picker #rangePicker>
+        </mat-date-range-picker>
+      </mat-form-field>
 
-<mat-form-field class="time" appearance="fill">
-  <mat-label><mat-icon>watch_later</mat-icon>  עזיבה מאוחרת</mat-label>
-  <input type="datetime-local" matInput  formControlName="lateCheckOut">
-</mat-form-field>
-<!--         
+      <mat-form-field class="time" appearance="fill">
+        <mat-label>
+          <mat-icon>watch_later</mat-icon> הגעה מוקדמת
+        </mat-label>
+        <input type="datetime-local" matInput formControlName="earlyCheckIn">
+      </mat-form-field>
+
+      <mat-form-field class="time" appearance="fill">
+        <mat-label>
+          <mat-icon>watch_later</mat-icon> עזיבה מאוחרת
+        </mat-label>
+        <input type="datetime-local" matInput formControlName="lateCheckOut">
+      </mat-form-field>
+      <!--         
 <div class="12hr-example">
   <input placeholder="12hr format (default settings)" aria-label="12hr format" [ngxTimepicker]="default" readonly>
   <ngx-material-timepicker #default></ngx-material-timepicker>
@@ -99,82 +96,92 @@
 </div> -->
 
 
-    <br>
-    <table>
-      <tr>
-        <td>
-    <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
-      <mat-label>מחיר מלא</mat-label>
-      <input matInput type="number"  placeholder="0" formControlName="totalPrice" min="0">
-      <span matPrefix>₪&nbsp;</span>
-      <span matSuffix>.00</span>
-    </mat-form-field>
-    <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
-      <mat-label>מחיר עלות</mat-label>
-      <input matInput type="number"  placeholder="0" formControlName="costPrice"  min="0">
-      <span matPrefix>₪&nbsp;</span>
-      <span matSuffix>.00</span>
-    </mat-form-field>
-    <!-- </td>
+      <br>
+      <table>
+        <tr>
+          <td>
+            <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
+              <mat-label>מחיר מלא</mat-label>
+              <input matInput type="number" placeholder="0" formControlName="totalPrice" min="0">
+              <span matPrefix>₪&nbsp;</span>
+              <span matSuffix>.00</span>
+            </mat-form-field>
+            <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
+              <mat-label>מחיר עלות</mat-label>
+              <input matInput type="number" placeholder="0" formControlName="costPrice" min="0">
+              <span matPrefix>₪&nbsp;</span>
+              <span matSuffix>.00</span>
+            </mat-form-field>
+            <!-- </td>
     <td> -->
-      <mat-form-field class="example-form-field" appearance="fill" class="bookingId">
-        <mat-label>מספר הזמנה</mat-label>
-        <input matInput type="text" formControlName="bookingId">
-      </mat-form-field>
-    </td>
-    <td>
-    <section dir="rtl">
-      <label>סטטוס הזמנה:</label>
-      <mat-radio-group formControlName="statusCode">
-        <br>
-        <mat-radio-button class="status" value=1>שולם</mat-radio-button>
-        <br>
-        <mat-radio-button class="status" value=2>לא שולם</mat-radio-button>
-      </mat-radio-group>
-    </section>
-        </td>
-      </tr>
-    </table>
-    <!-- <br> -->
-        <table>
-            <tr>
-                <td>
-                    <h4>
-                        <mat-form-field appearance="fill" class="num-of-people">
-                            <input matInput type="number" formControlName="numOfAdults"  min="0">
-                          </mat-form-field>
-                         מבוגרים</h4>
-                    
-                    </td>
-                    <td>
-                        <h4>
-                        <mat-form-field appearance="fill" class="num-of-people" >
-                            <input matInput type="number" formControlName="numOfKids"  min="0">
-                          </mat-form-field>
-                       ילדים</h4>
-                  </td>
-                  <td>
-                        <section dir="rtl">
-                            <p><mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox></p>
-                            <p><mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox></p>
-                          </section>
-                  </td>
-                  <td>
-                    <section dir="rtl">
-                      <p><mat-checkbox formControlName="porch">מרפסת</mat-checkbox></p>
-                     <p><mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox></p>
-                    </section>
-                  </td>
-              </tr>
-          </table>
+            <mat-form-field class="example-form-field" appearance="fill" class="bookingId">
+              <mat-label>מספר הזמנה</mat-label>
+              <input matInput type="text" formControlName="bookingId">
+            </mat-form-field>
+          </td>
+          <td>
+            <section dir="rtl">
+              <label>סטטוס הזמנה:</label>
+              <mat-radio-group formControlName="statusCode">
+                <br>
+                <mat-radio-button class="status" value=1>שולם</mat-radio-button>
+                <br>
+                <mat-radio-button class="status" value=2>לא שולם</mat-radio-button>
+              </mat-radio-group>
+            </section>
+          </td>
+        </tr>
+      </table>
+      <!-- <br> -->
+      <table>
+        <tr>
+          <td>
+            <h4>
+              <mat-form-field appearance="fill" class="num-of-people">
+                <input matInput type="number" formControlName="numOfAdults" min="0">
+              </mat-form-field>
+              מבוגרים
+            </h4>
 
-<!-- <table>
+          </td>
+          <td>
+            <h4>
+              <mat-form-field appearance="fill" class="num-of-people">
+                <input matInput type="number" formControlName="numOfKids" min="0">
+              </mat-form-field>
+              ילדים
+            </h4>
+          </td>
+          <td>
+            <section dir="rtl">
+              <p>
+                <mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox>
+              </p>
+              <p>
+                <mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox>
+              </p>
+            </section>
+          </td>
+          <td>
+            <section dir="rtl">
+              <p>
+                <mat-checkbox formControlName="porch">מרפסת</mat-checkbox>
+              </p>
+              <p>
+                <mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox>
+              </p>
+            </section>
+          </td>
+        </tr>
+      </table>
+
+      <!-- <table>
     <br>
     <tr>
       <td>
   
 </td> -->
-<!-- <td>
+      <!-- <td>
   <div dir="rtl">
     <section >
       <label>קומה: </label>
@@ -185,41 +192,48 @@
     </section>
   </div>
 </td> -->
-<!-- </tr>
+      <!-- </tr>
   </table> 
      <br> -->
-    <mat-form-field class="comments" appearance="fill">
-      <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
-        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
-      </svg> הערות</mat-label>
-      <input matInput formControlName="comments">
-    </mat-form-field>
-    <br>
-    <section dir="rtl">
-      <p><mat-checkbox formControlName="isImportant">במידה וההזמנה חשובה, יש לסמן שורה זו ועדכוני מחירים יבדקו בתדירות גבוהה</mat-checkbox></p>
-    </section>
+      <mat-form-field class="comments" appearance="fill">
+        <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
+            <path
+              d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z" />
+          </svg> הערות</mat-label>
+        <input matInput formControlName="comments">
+      </mat-form-field>
+      <br>
+      <section dir="rtl">
+        <p>
+          <mat-checkbox formControlName="isImportant">במידה וההזמנה חשובה, יש לסמן שורה זו ועדכוני מחירים יבדקו בתדירות
+            גבוהה</mat-checkbox>
+        </p>
+      </section>
 
-    <br>
-    <p dir="ltr">
-      <button mat-stroked-button class="btn" *ngIf="orderForm.valid" (click)="saveOrder()">
-          שמירת שינויים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-send-check-fill" viewBox="0 0 16 16">
-          <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
-          <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
-        </svg> </button>
+      <br>
+      <p dir="ltr">
+        <button mat-stroked-button class="btn" *ngIf="orderForm.valid" (click)="saveOrder()">
+          שמירת שינויים <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+            class="bi bi-send-check-fill" viewBox="0 0 16 16">
+            <path
+              d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z" />
+            <path
+              d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z" />
+          </svg> </button>
         <button mat-stroked-button class="btn" (click)="onEditClickecd()">
-          עריכת פרטים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-              <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-            </svg> </button>
+          עריכת פרטים <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+            class="bi bi-pencil-fill" viewBox="0 0 16 16">
+            <path
+              d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
+          </svg> </button>
         <button mat-stroked-button class="btn" (click)="deleteOrder()">
-          מחיקת הזמנה  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-              <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
-            </svg> </button>
-    </p>
+          מחיקת הזמנה <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+            class="bi bi-trash3-fill" viewBox="0 0 16 16">
+            <path
+              d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
+          </svg> </button>
+      </p>
 
-</form>
-</div>
-   
-
-
-
-
+    </form>
+  </div>
