--- a/src/app/modules/Calendar/calendar/calendar.component.css
+++ b/src/app/modules/Calendar/calendar/calendar.component.css
@@ -1,7 +1,7 @@
 .fc .fc-col-header-cell-cushion {
     display: inline-block;
     padding: 2px 4px;
-    /* color:#000000 */
+    /* color:#517ec0 */
   }
 
 .profit{
