--- a/src/app/modules/Admin/admin/admin.component.html
+++ b/src/app/modules/Admin/admin/admin.component.html
@@ -1,4 +1,5 @@
-
+<div class="adminForm">
+  
  <form [formGroup]="adminForm" >
   <div>
   <mat-form-field appearance="fill">
@@ -20,6 +21,7 @@
   <button [disabled]="!adminForm.valid" (click)="updateAdmin()">עדכן פרטים</button>
 <!-- Remind Passowrd -->
 </form>
+</div>
 
 
 
