--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -48,7 +48,7 @@
                   <br>
                   <b>admin</b> </a></li>
               </div>
-              <div class="left-element">
+              <!-- <div class="left-element">
              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
               <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
@@ -69,7 +69,7 @@
                 <span>Disable alerts</span>
               </button>
             </mat-menu>
-          
+           -->
           </ul>
         </nav>
 
