--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -40,22 +40,22 @@
                 </svg>
                 <br>
                 <b>הזמנה חדשה</b> </a></li>
+              </div>
+              <div class="left-element">
                 <li class="user"><a routerLink="/admin" routerLinkActive="active">
                   <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                   </svg>
                   <br>
-                  <b>admin</b> </a></li>
-              </div>
-              <div class="left-element">
-             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                  <b id="admin">{{adminName}}</b> </a></li>
+             <!-- <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
               <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
-            </button>
+            </button> -->
           </div>
-            <mat-menu #menu="matMenu">
+            <!-- <mat-menu #menu="matMenu">
               <button mat-menu-item>
                 <mat-icon>user-icon</mat-icon>
                 <span>Redial</span>
@@ -68,8 +68,7 @@
                 <mat-icon>notifications_off</mat-icon>
                 <span>Disable alerts</span>
               </button>
-            </mat-menu>
-          
+            </mat-menu> -->
           </ul>
         </nav>
 
