--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
      <app-menu class="nav"></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
-    <!-- </div>  -->
-  </div>
+    </div> 
+  <!-- </div> -->
+  <!-- <div *ngIf="!_authorized"> -->
     <!-- <router-outlet></router-outlet> -->
+<!-- </div> -->
