--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -68,6 +68,7 @@
             <mat-menu #menu="matMenu">
               <button mat-menu-item (click)="goToUpdateAdmin()">החלפת סיסמא</button>
               <button mat-menu-item (click)="goToAddAdmin()">הוספת משתמש</button>
+              <button mat-menu-item (click)="logOut()">יציאה מהמערכת</button>
             </mat-menu>
       </div>
       <!-- <div class="left-element">
