try to fix guard service

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -66,8 +66,8 @@
                 <b id="admin">{{adminName}}</b></button>
             </li>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="goToUpdateAdmin()">החלפת סיסמא</button>
-              <button mat-menu-item (click)="goToAddAdmin()">הוספת משתמש</button>
+              <button mat-menu-item (click)="updateAdmin()">החלפת סיסמא</button>
+              <button mat-menu-item (click)="addAdmin()">הוספת משתמש</button>
               <button mat-menu-item (click)="logOut()">יציאה מהמערכת</button>
             </mat-menu>
       </div>
