--- a/src/app/modules/Login/login/login.component.html
+++ b/src/app/modules/Login/login/login.component.html
@@ -32,7 +32,7 @@
               {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
         </div>
-        <button [disabled]="!loginForm.valid" (click)="Login()">Login</button>
+        <button [disabled]="!loginForm.valid" (click)="Login()" class="login-btn">Login</button>
         <!-- Remind Passowrd -->
       </form>
     </div>
