--- a/src/app/modules/customer/customer-card/customer-card.component.html
+++ b/src/app/modules/customer/customer-card/customer-card.component.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
 
 <div dir="rtl" >
-    <form [formGroup]="customerForm" class="example-form">
+    <form [formGroup]="customerForm">
     <div class="form-card">
     <div class="title">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
@@ -22,23 +22,24 @@
           </svg>
           <h1>כרטיס לקוח</h1>
         </div>
-    <p>
-        <mat-form-field appearance="fill" class="first-name">
+        <div class="container">
+        <mat-form-field appearance="fill" class="name">
         <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
           </svg> שם פרטי</mat-label>
         <input matInput formControlName="firstName">
       </mat-form-field>  
-      <mat-form-field appearance="fill" class="last-name">
+      <mat-form-field appearance="fill" class="name">
         <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
           </svg> שם משפחה</mat-label>
         <input matInput formControlName="lastName">
       </mat-form-field> 
-    </p>
-      <p>
+        </div>
+      
+        <div class="container">
         <mat-form-field appearance="fill" style="width: 40%;">
         <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
             <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
@@ -57,8 +58,9 @@
           </svg> טלפון נוסף</mat-label>
         <input matInput formControlName="anotherPhoneNumber">
       </mat-form-field>
-      </p>
-      <p>
+        </div>
+      
+        <div class="container">
         <mat-form-field appearance="fill" style="width: 100%;">
             <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
@@ -66,66 +68,50 @@
               </svg> כתובת מגורים </mat-label>
             <input matInput formControlName="address">
           </mat-form-field>          
-      </p>
-      <!-- <p> -->
-     <table class="form-table">
-            <tr>
-                <td>
-                    <h4>
-                        <mat-form-field appearance="fill" class="num-of-people">
-                            <input matInput type="number" formControlName="numOfAdults">
-                          </mat-form-field>
-                         מבוגרים</h4>
-                    
-                    </td>
-                    <td>
-                        <h4>
-                        <mat-form-field appearance="fill" class="num-of-people" >
-                            <input matInput type="number" formControlName="numOfKids">
-                          </mat-form-field>
-                       ילדים</h4>
-                    
-                  </td>
-                  <td>
-                        <section dir="rtl">
-                            <p><mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox></p>
-                            <p><mat-checkbox formControlName="porch">מרפסת</mat-checkbox></p>
-                          </section>
-                  </td>
-                  <td>
-                    <section dir="rtl">
-                        <p><mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox></p>
-                        <p><mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox></p>
-                      </section>
-                  </td>
-              </tr>
-          </table>
-          <p>
-            <mat-form-field appearance="fill" style="width: 100%;">
+      </div>
+      <div class="container">
+        <h4>
+          <mat-form-field appearance="fill" class="num-of-people">
+              <input matInput type="number" formControlName="numOfAdults">
+            </mat-form-field>
+           מבוגרים</h4>
+           <h4>
+            <mat-form-field appearance="fill" class="num-of-people" >
+                <input matInput type="number" formControlName="numOfKids">
+              </mat-form-field>
+           ילדים</h4>
+           <section class="options">
+            <p><mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox></p>
+            <p><mat-checkbox formControlName="porch">מרפסת</mat-checkbox></p>
+          </section>
+          <section class="options">
+            <p><mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox></p>
+            <p><mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox></p>
+          </section>
+      </div>
+      <div class="container">
+        <mat-form-field appearance="fill" style="width: 100%;">
                 <mat-label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
                     <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1h-9zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"/>
                   </svg> הערות</mat-label>
                 <input matInput formControlName="comments">
-              </mat-form-field>          
-          </p>
-          <p dir="ltr">
-            <button mat-stroked-button class="btn" *ngIf="customerForm.valid" (click)="saveCustomer()">
-                שמירת שינויים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-send-check-fill" viewBox="0 0 16 16">
-                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
-                <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
-              </svg> </button>
-              <button mat-stroked-button class="btn" (click)="onEditClickecd()">
-                עריכת פרטים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                    <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-                  </svg> </button>
-              <button mat-stroked-button class="btn" (click)="deleteCustomer()">
-                מחיקת לקוח  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
-                  </svg> </button>
-          </p>
-    </div>
-    <div>
-
+              </mat-form-field> 
+      </div>
+      <div class="button-container">
+        <button mat-stroked-button class="btn" *ngIf="customerForm.valid" (click)="saveCustomer()">
+          שמירת שינויים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-send-check-fill" viewBox="0 0 16 16">
+          <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+          <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
+        </svg> </button>
+        <button mat-stroked-button class="btn" (click)="onEditClickecd()">
+          עריכת פרטים  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+              <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+            </svg> </button>
+        <button mat-stroked-button class="btn" (click)="deleteCustomer()">
+          מחיקת לקוח  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+              <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+            </svg> </button>
+      </div>
     </div>
 </form>
 </div>
